[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main"
build_command = "poetry build"
commit_author = "semantic-release-bot <semantic-release-bot@healthec.com>"
commit_subject = "chore(release): deidentifier {version}"
commit_message = "chore(release): deidentifier {version} [skip ci]"
hvcs = "gitlab"
tag_format="deidentifier/v{version}"
pre_commit_command = "git pull origin main"
upload_to_release = false

[tool.poetry]
name = "deidentifier"
version = "0.2.2"
description = "De-Identifier"
authors = ["The HealthEC Authors"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
