[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main"
build_command = "poetry build"
commit_author = "semantic-release-bot <semantic-release-bot@healthec.com>"
commit_subject = "chore(release): fhirclient {version}"
commit_message = "chore(release): fhirclient {version} [skip ci]"
hvcs = "gitlab"
pre_commit_command = "git pull origin main"
tag_format="fhirclient/v{version}"
# upload_to_vcs_release = false
upload_to_release = false
# version_source = "tag"

[tool.poetry]
name = "fhirclient"
version = "0.2.2"
description = "FhirClient"
authors = ["The HealthEC Authors"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = ">=2.28.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
