[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main"
build_command = "poetry build"
commit_author = "semantic-release-bot <semantic-release-bot@healthec.com>"
commit_subject = "chore(release): omniparser {version}"
commit_message = "chore(release): omniparser {version} [skip ci]"
hvcs = "gitlab"
pre_commit_command = "git pull origin main"
tag_format="omniparser/v{version}"
upload_to_release = false

[tool.poetry]
name = "omniparser"
version = "0.6.1"
description = "A python wrapper for omniparser"
authors = ["Suresh Nakkeran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = ">=6.0"
smart-open = {version = ">=6.0.0", extras = ["all"]}


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
